# scalar-eth

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.cross  README.md
crates/node/: Cargo.toml
crates/node/src/: chain_provider.rs  chainspec.rs  evm.rs  lib.rs  node.rs
crates/pevm/: Cargo.toml
crates/pevm/src/: config.rs  lib.rs  macros.rs
crates/pevm/src/executor/: eth_batch_executor.rs  eth_block_executor.rs  eth_evm_executor.rs  mod.rs  provider.rs  test.rs
crates/pevm/src/executor/parallel/: chain.rs  context.rs  eth_batch_executor.rs  eth_block_executor.rs  eth_evm_executor.rs  evm.rs  mod.rs  scheduler.rs  storage.rs  types.rs
crates/pevm/src/executor/parallel/chain/: ethereum.rs  optimism.rs
crates/pevm/src/executor/parallel/evm/: context.rs  db.rs  types.rs  wrapper.rs
crates/pevm/src/executor/parallel/memory/: mod.rs  mv_memory.rs
crates/pevm/src/executor/parallel/storage/: in_memory.rs  rpc.rs
crates/precompile/: Cargo.toml
crates/testing/: Cargo.toml  run.sh
crates/testing/src/cases/: blockchain_test.rs
crates/testing/tests/: tests.rs
crates/wallet/: Cargo.toml
etc/: run.sh
