[workspace]
members = [
    "bin/scalar/",
    "crates/node",
    "crates/pevm",
    "crates/precompile",
    "crates/wallet",
    "crates/testing"
]
default-members = ["bin/scalar"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.81"
authors = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/scalarorg/scalar-eth"
homepage = "https://github.com/scalarorg/scalar-eth"
keywords = ["ethereum", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"

[workspace.lints.rust]
rust-2018-idioms = "deny"
unreachable-pub = "warn"
unused-must-use = "deny"
missing_docs = "warn"

[workspace.lints.rustdoc]
all = "warn"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = 2
strip = false

[workspace.dependencies]
# Scalar
scalar-node = { path = "crates/node" }
scalar-pevm = { path = "crates/pevm", features = ["std", "optimism"] }
scalar-precompile = { path = "crates/precompile" }

alloy = { version = "0.4", features = [
    "contract",
    "providers",
    "provider-http",
    "signers",
] }
alloy-chains = "0.1.32"
alloy-consensus = { version = "0.4", default-features = false }
alloy-eips = { version = "0.4", default-features = false }
alloy-genesis = { version = "0.4", default-features = false }
alloy-network = { version = "0.4" }
alloy-primitives = { version = "0.8.7" }
alloy-provider = { version = "0.4", features = [
    "reqwest",
], default-features = false }
alloy-rlp = { version = "0.3" }
alloy-rpc-types = { version = "0.4" }
alloy-sol-types = "0.8.0"
alloy-signer-local = { version = "0.4", features = ["mnemonic"] }
alloy-transport = { version = "0.4" }
alloy-transport-http = { version = "0.4", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ipc = { version = "0.4", default-features = false }
alloy-transport-ws = { version = "0.4", default-features = false }
alloy-trie = { version = "0.6", default-features = false }

# op
op-alloy-consensus = "0.4"
op-alloy-network = "0.4"
op-alloy-rpc-types = "0.4"
op-alloy-rpc-types-engine = "0.4"

# tokio
tokio = { version = "1.21", default-features = false }

# revm
revm = { version = "14.0.3", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }
revm-inspectors = "0.7.6"
revm-primitives = { version = "10.0.0", features = ["std"], default-features = false }

# Use reth version on 10/11/2024
# Update reth version when needed
# Currently Cargo does not support dynamic revision in env variable

reth = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60", features = ["std", "optimism"]  }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60", features = ["std", "optimism"]  }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60", features = [ "std", "optimism"]  }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60", features = ["optimism"]  }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60", features = [ "std", "optimism" ]  }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-network-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-stages = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }

# ethereum
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60", features = ["test-utils"] }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }

# optimism
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60", features = ["optimism"] }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60", features = ["optimism"] }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60", features = ["optimism"] }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "58bfa60" }


# crypto
enr = { version = "0.12.1", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }

# rpc
jsonrpsee = "0.24"

# misc
bitflags = "2.4"
clap = "4"
dashmap = "6.0"
eyre = "0.6.12"
tracing = "0.1.0"
rayon = "1.7"
reqwest = { version = "0.12", default-features = false }
serde = "1"
serde_json = "1"
smallvec = "1"
once_cell = "1.19"
thiserror = "1"
# misc-testing
rstest = "0.18.2"
