[package]
name = "scalar-pevm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-chainspec.workspace = true
reth-ethereum-forks.workspace = true
reth-evm.workspace = true
reth-primitives = { workspace = true, features = ["reth-codec"] }
reth-revm.workspace = true
reth-ethereum-consensus.workspace = true
reth-prune-types.workspace = true
reth-execution-errors.workspace = true
reth-execution-types.workspace = true
reth-tracing.workspace = true
revm.workspace = true

# Ethereum
revm-primitives.workspace = true

ahash = { version = "0.8.11", features = ["serde"] }

# Alloy
alloy-chains.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-trie.workspace = true

op-alloy-consensus.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types.workspace = true
op-alloy-rpc-types-engine.workspace = true

async-scoped = {version="0.9.0", features=["use-tokio", "use-async-std"]}
bitflags.workspace = true
bitvec = "1.0.1"
dashmap.workspace = true
reqwest.workspace = true
serde.workspace = true
smallvec.workspace = true
tokio.workspace = true

[dev-dependencies]
reth-testing-utils.workspace = true
reth-revm = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["secp256k1"] }
secp256k1.workspace = true
serde_json.workspace = true
alloy-genesis.workspace = true
alloy-consensus.workspace = true

[features]
default = ["std"]
std = []
optimism = []
