[package]
name = "scalar-testing"
version.workspace = true
description = "PEVM testing support for reth."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
pevm-tests = []
asm-keccak = ["reth-primitives/asm-keccak"]

[dependencies]
reth-chainspec.workspace = true
reth-primitives.workspace = true
reth-db = { workspace = true, features = ["mdbx", "test-utils", "disable-lock"] }
reth-db-api.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
reth-stages.workspace = true
reth-evm-ethereum.workspace = true
reth-tracing.workspace = true
scalar-pevm = { path = "../pevm" }

alloy-rlp.workspace = true
alloy-primitives.workspace = true

ahash = "0.8"
walkdir = "2.3.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rayon.workspace = true
